--- a/package.json
+++ b/package.json
@@ -1,35 +1,44 @@
 {
-  "name": "sila-md-mini",
+  "name": "kavix-md-bot",
   "version": "1.0.0",
-  "description": "WhatsApp Bot using Baileys Multi-Device with Local DB",
-  "main": "./index.js",
+  "description": "WhatsApp MD Bot with Multi-Device Support",
+  "main": "main.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node .",
-    "dev": "nodemon ."
+    "start": "node main.js",
+    "dev": "node --env-file=.env main.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "session:clean": "rm -rf session_*",
+    "auto:start": "node -e \"require('./main.js').startAllSessions()\""
   },
-  "author": "Sila Md",
+  "keywords": [
+    "whatsapp",
+    "bot",
+    "multi-device",
+    "baileys",
+    "express"
+  ],
+  "author": "Your Name",
   "license": "MIT",
-  "engines": {
-    "node": ">=20.0.0"
-  },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.17.16",
-    "axios": "^1.7.4",
-    "chalk": "^5.3.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "fs-extra": "^11.2.0",
-    "jimp": "^0.22.12",
-    "moment-timezone": "^0.5.46",
-    "node-fetch": "^3.3.2",
-    "pino": "^9.3.0",
-    "ytdl-core": "^4.11.5",
-    "yt-search": "^2.10.4",
-    "megajs": "^1.1.3",
-    "qrcode-terminal": "^0.12.0"
+    "@whiskeysockets/baileys": "^6.4.0",
+    "axios": "^1.6.0",
+    "dotenv": "^16.3.0",
+    "express": "^4.18.0",
+    "fs-extra": "^11.0.0",
+    "megajs": "^1.0.2",
+    "pino": "^8.0.0",
+    "yt-search": "^2.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "cross-env": "^7.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/your-username/kavix-md-bot.git"
   }
 }
