--- a/package.json
+++ b/package.json
@@ -1,44 +1,39 @@
 {
-  "name": "kavix-md-bot",
+  "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "WhatsApp MD Bot with Multi-Device Support",
+  "description": "WhatsApp Bot with Multi-Number Support",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
-    "start": "node index.js",
-    "dev": "node --env-file=.env index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "session:clean": "rm -rf session_*",
-    "auto:start": "node -e \"require('./index.js').startAllSessions()\""
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "@octokit/rest": "^20.0.2",
+    "@whiskeysockets/baileys": "npm:baileys-mod",
+    "axios": "^1.11.0",
+    "child_process": "^1.0.2",
+    "denethdev-ytmp3": "1.0.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "fs-extra": "^11.2.0",
+    "jimp": "^0.16.1",
+    "megajs": "^1.3.8",
+    "moment-timezone": "^0.6.0",
+    "mongoose": "^8.17.0",
+    "node-fetch": "^2.6.1",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
+    "pino": "^8.17.0",
+    "yt-search": "2.12.1"
+  },
+  "engines": {
+    "node": ">=18.x"
   },
   "keywords": [
     "whatsapp",
     "bot",
     "multi-device",
-    "baileys",
-    "express"
+    "baileys"
   ],
-  "author": "Your Name",
-  "license": "MIT",
-  "dependencies": {
-    "@whiskeysockets/baileys": "^6.4.0",
-    "axios": "^1.6.0",
-    "dotenv": "^16.3.0",
-    "express": "^4.18.0",
-    "fs-extra": "^11.0.0",
-    "megajs": "^1.0.2",
-    "pino": "^8.0.0",
-    "yt-search": "^2.10.0"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.0"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/your-username/kavix-md-bot.git"
-  }
+  "author": "",
+  "license": "MIT"
 }
