--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ MEGA_PASS=Trippleo1802obed
 SESSION_BASE_PATH=./session
 LOG_LEVEL=silent
 CONNECT_TIMEOUT_MS=60000
+
+.STORAGE_TYPE || 'mega'; // 'local' or 'mega'
+MEGA_EMAIL || '1234ranawakagevijitha@gmail.com';
+MEGA_PASSWORD || 'sandesH@1234';
